first commit - dpk

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
+                    <a href="/index.html">WHO WE ARE </a>
                 </li>
+                <li>|</li>
                 <li>
-                    <a href="/about.html">who we are</a>
+                    <a href="/about.html">WHAT WE DO</a>
                 </li>
+                <li>|</li>
                 <li>
-                    <a href="/what.html">What we do</a>
+                    <a href="/what.html">NEWS & EVENTS</a>
+                </li>
+                <li>|</li>
+                <li>
+                    <a href="#">WHERE WE WORK</a>
+                </li>
+                <li>|</li>
+                <li>
+                    <a href="#">CONTACT US</a>
                 </li>
             </ul>
         </nav>
