updated footer & header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
 <div class="wrapper">
     <div class="header">
-        <h1>NZA Group</h1>
+        <img src="https://via.placeholder.com/110x100" alt="logo">
+            <div class="banner">
+            <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
+        </div>
     </div>
     <div class="nav">
         <nav>
-            <ul>
+            <ul id="bar">
                 <li>
                     <a href="/index.html">WHO WE ARE </a>
                 </li>
