--- a/about.html
+++ b/about.html
@@ -9,42 +9,35 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <h1>NZA Group</h1>
+            <img src="https://via.placeholder.com/110x100" alt="logo">
+                <div class="banner">
+                <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
+            </div>
         </div>
         <div class="nav">
             <nav>
-                <ul>
+                <ul id="bar">
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="/index.html">WHO WE ARE </a>
                     </li>
+                    <li>|</li>
                     <li>
-                        <a href="/about.html">who we are</a>
+                        <a href="/about.html">WHAT WE DO</a>
                     </li>
+                    <li>|</li>
                     <li>
-                        <a href="/what.html">What we do</a>
+                        <a href="/what.html">NEWS & EVENTS</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">WHERE WE WORK</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">CONTACT US</a>
                     </li>
                 </ul>
             </nav>
-        </div>
-        <div class="link">
-            <h4>Who We Is</h4>
-            <ul>
-                <li>
-                    <a href="#">welcome</a>
-                </li>
-                <li>
-                    <a href="#">attorneys</a>
-                </li>
-                <li>
-                    <a href="#">staff</a>
-                </li>
-                <li>
-                    <a href="#">rep</a>
-                </li>
-                <li>
-                    <a href="#">history</a>
-                </li>
-            </ul>
         </div>
         <div class="content">
             <img>
@@ -56,7 +49,30 @@
         </div>
         <div class="footer">
             <footer>
-                &copy; NZA Group 
+                <ul>
+                    <li>
+                        <a href="/index.html">HOME</a>
+                    </li>
+                    <li>-</li>
+                    <li>
+                        <a href="/index.html">WHO WE ARE</a>
+                    </li>
+                    <li>-</li>
+                    <li>
+                        <a href="/about.html">WHAT WE DO</a>
+                    <li>-</li>
+                    <li>
+                        <a href="/what.html">NEWS & EVENTS</a>
+                    </li>
+                    <li>-</li>
+                    <li>
+                        <a href="/about.html">WHERE WE WORK</a>
+                    <li>-</li>
+                    <li>
+                        <a href="/what.html">CONTACT US</a>
+                    </li>
+                </ul>
+                <h6>&copy;2009 Neltse, Zehe & Antas, P.C. // Website Design by OneTen Creative</h6>
             </footer>
         </div>
 
