--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 <div class="wrapper">
     <div class="header">
-        <h1>NZA Group</h1>
+        <!--Placedoler for logo-->
+        <img src="https://via.placeholder.com/100"alt="NZA Law Group">
+        <h1>NZA Group</h1>       
     </div>
     <div class="nav">
         <nav>
@@ -27,8 +29,9 @@
         </nav>
     </div>
     <div class="content">
-        <img>
-            This is some stuff
+        <!--Main Image-->
+        <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="NZA Law Group" style="width:500px;height:600px;">
+            
         </img>
         <p>
             here is our website
