--- a/what.html
+++ b/what.html
@@ -9,6 +9,8 @@
 <body>
     <div class="wrapper">
         <div class="header">
+            <!--Placeholder for logo-->
+            <img src="https://via.placeholder.com/100"alt="NZA Law Group">
             <h1>NZA Group</h1>
         </div>
         <div class="nav">
@@ -43,13 +45,16 @@
                 </li>
                 <li>
                     <a href="#">history</a>
+                    <!--Image for Attorneys link-->
+                    <img src="images/tingey-injury-law-firm-nSpj-Z12lX0-unsplash.jpg" alt="Attorneys" style="width:200px;height:200px;">
                 </li>
             </ul>
         </div>
         <div class="content">
-            <img>
-                This is some stuff
-            </img>
+            <img src="images/melinda-gimpel-xcVW_sFp4jQ-unsplash.jpg" style="width:200px;height:200px;">
+            <img src="images/drew-beamer-Se7vVKzYxTI-unsplash.jpg" style="width:200px;height:200px;">
+            <img src="images/adeolu-eletu-E7RLgUjjazc-unsplash.jpg" style="width:200px;height:200px;">
+            <img src="images/shay-5n2EemBYQm4-unsplash.jpg" style="width:200px;height: 200px;">
             <p>
                 here is our website
             </p>
