added to sidebars

--- a/what.html
+++ b/what.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who is NZA</title>
+    <title>What We Do</title>
     <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
@@ -15,36 +15,46 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html">who we are</a>
+                        <a href="about.html">who We Are</a>
                     </li>
                     <li>
-                        <a href="/what.html">What we do</a>
+                        <a href="what.html">What We Do</a>
                     </li>
                 </ul>
             </nav>
         </div>
         <div class="link">
-            <h4>Who We Is</h4>
+            <h4>What We Do</h4><br><hr>
             <ul>
                 <li>
-                    <a href="#">welcome</a>
+                    <a href="#">Subrogation</a><br>
+                    Property<br>
+                    Workers compensation
                 </li>
                 <li>
-                    <a href="#">attorneys</a>
+                    <a href="#">Litigation</a><br>
+                    Apellate<br>
+                    Commercial<br>
+                    Defense<br>
+                    Labor/Employment<br>
                 </li>
                 <li>
-                    <a href="#">staff</a>
-                </li>
+                    <a href="#">Business</a><br>
+                    Brokerage Agreement<br>
+                    Business Formation<br>
+                    Business Related Contracts<br>
+                    Labor/Employment<br>
                 <li>
-                    <a href="#">rep</a>
+                    Transportation
                 </li>
-                <li>
-                    <a href="#">history</a>
                 </li>
+                    <img id="office-photo" src="/images/office_photo.jpg" width="150px" height="150px">
+                
             </ul>
+        
         </div>
         <div class="content">
             <img>
