--- a/about.html
+++ b/about.html
@@ -15,35 +15,39 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html">who we are</a>
+                        <a href="about.html">who we are</a>
                     </li>
                     <li>
-                        <a href="/what.html">What we do</a>
+                        <a href="what.html">What we do</a>
                     </li>
                 </ul>
             </nav>
         </div>
         <div class="link">
-            <h4>Who We Is</h4>
+            <h4>Who We Are</h4><br><hr>
             <ul>
                 <li>
-                    <a href="#">welcome</a>
+                    <a href="#">welcome</a><br><br>
                 </li>
                 <li>
-                    <a href="#">attorneys</a>
+                    <a href="#">attorneys</a><br><br>
                 </li>
                 <li>
-                    <a href="#">staff</a>
+                    <a href="#">staff</a><br><br>
                 </li>
                 <li>
-                    <a href="#">rep</a>
+                    <a href="#">rep</a><br><br>
                 </li>
                 <li>
                     <a href="#">history</a>
                 </li>
+                    <div class="mapouter"><div class="gmap_canvas"><iframe width="270" height="90" id="gmap_canvas" src="https://maps.google.com/maps?q=55%20West%20Monroe%20Street%20Suite%201800%20Chicago%2C%20Illinois%2060603&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com">what is my ip</a></div><style>.mapouter{position:relative;text-align:right;height:90px;width:90px;}.gmap_canvas {overflow:hidden;background:none!important;height:90px;width:270px;}</style></div>
+                    <b>Where We Work</b><br>
+                    Find out more about our work area coverage.
+
             </ul>
         </div>
         <div class="content">
