--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html">who we are</a>
+                    <a href="about.html">Who We Are</a>
                 </li>
                 <li>
-                    <a href="/what.html">What we do</a>
+                    <a href="what.html">What We Do</a>
                 </li>
             </ul>
         </nav>
@@ -35,8 +35,14 @@
         </p>
     </div>
     <div class="newsfeed">
-        <p>
-            this is where news will goo.
+        <h2>News Feed</h2><hr>
+        <ul>
+            <li><a href= "#">Ashley S. Portman was named a Rising Star Super Lawyer® from 2018-2019.</a></li>
+            <li><a href="#">Savaiano has been named a Super Lawyer® for 15 consecutive years.</a></li>
+            <li><a href="#">Pat Hess and Kevin Pugliese settled a subrogation lawsuit involving a water loss for $1.8 million in Minnesota.</a></li>
+            <li><a href="#">Jack McCabe holds a AV® Preeminent™ Rating by Martindale-Hubbell.</a></li>
+        </ul>
+
         </p>
     </div>
     <div class="contact">
