completed index page

--- a/index.html
+++ b/index.html
@@ -7,64 +7,80 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<div class="wrapper">
-    <div class="header">
-        <img src="https://via.placeholder.com/110x100" alt="logo">
-            <div class="banner">
-            <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
+    <div class="wrapper">
+        <div class="l_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
         </div>
-    </div>
-    <div class="nav">
-        <nav>
-            <ul id="bar">
-                <li>
-                    <a href="/index.html">WHO WE ARE </a>
-                </li>
-                <li>|</li>
-                <li>
-                    <a href="/about.html">WHAT WE DO</a>
-                </li>
-                <li>|</li>
-                <li>
-                    <a href="/what.html">NEWS & EVENTS</a>
-                </li>
-                <li>|</li>
-                <li>
-                    <a href="#">WHERE WE WORK</a>
-                </li>
-                <li>|</li>
-                <li>
-                    <a href="#">CONTACT US</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    <div class="content">
+        <div class="r_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
+        </div>
+        <div class="header">
+            <img class="logo" src="https://via.placeholder.com/70x70" alt="logo">
+            <div class="banner">
+                <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
+            </div>
+        </div>
+        <div class="nav">
+            <nav>
+                <ul id="bar">
+                    <li>
+                        <a href="/about.html">WHO WE ARE </a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="/what.html">WHAT WE DO</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">NEWS & EVENTS</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">WHERE WE WORK</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">CONTACT US</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="content">
         <!--Main Image-->
-        <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="NZA Law Group" style="width:500px;height:600px;">
-            
-        </img>
-        <p>
-            here is our website
-        </p>
+        <img class="bookshelf" src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="NZA Law Group" height="400"
+        width="520">
+        <h4>Welcome to our Website!</h4>
+            <p>
+                Nielson, Zehe & Antas, PC is nationally recognized and respected law firm that offers its clients big firm experience and talent in a smaller firm environment. Our reputation is very important to us. e solve our clients problems in some situations and we even prevent them all together in other situations. We welcome you to our website to learn more about us. 
+            </p>
+        </div>
+        <div class="newsfeed">
+            <h3>News Feed</h3><hr>
+            <p>Ashley S. Portman was named a Rising Star Super Lawyer® from 2018-2019.</p>   
+            <p>Savaiano has been named a Super Lawyer® for 15 consecutive years.</p>
+            <p>Pat Hess and Kevin Pugliese settled a subrogation lawsuit involving a water loss for $1.8 million in Minnesota.</p> 
+            <p>Jack McCabe holds a AV® Preeminent™ Rating by Martindale-Hubbell.</p>
+            <p>Ashley S. Portman was named a Rising Star Super Lawyer® from 2018-2019.</p>   
+            <p>Savaiano has been named a Super Lawyer® for 15 consecutive years.</p>
+            <p>Pat Hess and Kevin Pugliese settled a subrogation lawsuit involving a water loss for $1.8 million in Minnesota.</p> 
+            <p>Jack McCabe holds a AV® Preeminent™ Rating by Martindale-Hubbell.</p>
+            <p>Ashley S. Portman was named a Rising Star Super Lawyer® from 2018-2019.</p>   
+            <p>Savaiano has been named a Super Lawyer® for 15 consecutive years.</p>
+            <p>Pat Hess and Kevin Pugliese settled a subrogation lawsuit involving a water loss for $1.8 million in Minnesota.</p> 
+            <p>Jack McCabe holds a AV® Preeminent™ Rating by Martindale-Hubbell.</p>
+        </div>    
+        <div class="contact">
+            <p>
+                Nielson , Zehe & Antas, P.C.
+                <br>55 W. Monroe Street, Suite 1800
+                <br>Chicago, Illinois 60603
+                <br>312-655-2343 phone
+                <br>312-655-2343 fax
+                <br>
+                <a href="email">ENielson@nzalaw.com</a>
+            </p>
+        </div>   
     </div>
-    <div class="newsfeed">
-        <h2>News Feed</h2><hr>
-        <ul>
-            <li><a href= "#">Ashley S. Portman was named a Rising Star Super Lawyer® from 2018-2019.</a></li>
-            <li><a href="#">Savaiano has been named a Super Lawyer® for 15 consecutive years.</a></li>
-            <li><a href="#">Pat Hess and Kevin Pugliese settled a subrogation lawsuit involving a water loss for $1.8 million in Minnesota.</a></li>
-            <li><a href="#">Jack McCabe holds a AV® Preeminent™ Rating by Martindale-Hubbell.</a></li>
-        </ul>
-
-        </p>
-    </div>
-    <div class="contact">
-        <p>
-            here is contact
-        </p>
-    </div>
-</div>
     
 </body>
 </html>
