--- a/about.html
+++ b/about.html
@@ -18,15 +18,15 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/index.html">WHO WE ARE </a>
+                        <a href="/about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/about.html">WHAT WE DO</a>
+                        <a href="/what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/what.html">NEWS & EVENTS</a>
+                        <a href="/#">NEWS & EVENTS</a>
                     </li>
                     <li>|</li>
                     <li>
@@ -88,21 +88,21 @@
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/index.html">WHO WE ARE</a>
+                        <a href="/about.html">WHO WE ARE</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/about.html">WHAT WE DO</a>
+                        <a href="/whatt.html">WHAT WE DO</a>
                     <li>-</li>
                     <li>
-                        <a href="/what.html">NEWS & EVENTS</a>
+                        <a href="#">NEWS & EVENTS</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/about.html">WHERE WE WORK</a>
+                        <a href="#">WHERE WE WORK</a>
                     <li>-</li>
                     <li>
-                        <a href="/what.html">CONTACT US</a>
+                        <a href="#">CONTACT US</a>
                     </li>
                 </ul>
                 <h6>&copy;2009 Neltse, Zehe & Antas, P.C. // Website Design by OneTen Creative</h6>
