--- a/about.html
+++ b/about.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="l_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
+        </div>
+        <div class="r_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
+        </div>
         <div class="header">
-            <img src="https://via.placeholder.com/110x100" alt="logo">
-                <div class="banner">
+            <img class="logo" src="https://via.placeholder.com/70x70" alt="logo">
+            <div class="banner">
                 <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
             </div>
         </div>
@@ -40,45 +46,52 @@
             </nav>
         </div>
 
-        <div class="link">
-            <h4>Who We Are</h4><br><hr>
-            <ul>
-                <li>
-                    <a href="#">welcome</a><br><br>
-                </li>
-                <li>
-                    <a href="#">attorneys</a><br><br>
-                </li>
-                <li>
-                    <a href="#">staff</a><br><br>
-                </li>
-                <li>
-                    <a href="#">rep</a><br><br>
-                </li>
-                <li>
-                    <a href="#">history</a>
-                </li>
-                    <div class="mapouter"><div class="gmap_canvas"><iframe width="270" height="90" id="gmap_canvas" src="https://maps.google.com/maps?q=55%20West%20Monroe%20Street%20Suite%201800%20Chicago%2C%20Illinois%2060603&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com">what is my ip</a></div><style>.mapouter{position:relative;text-align:right;height:90px;width:90px;}.gmap_canvas {overflow:hidden;background:none!important;height:90px;width:270px;}</style></div>
-                    <b>Where We Work</b><br>
-                    Find out more about our work area coverage.
-            </ul>
+        <div class="left-sidebar">
+            <h4>Who We Are</h4><hr>
+            <p>
+                <a href="#">Welcome</a><br>
+            </p>
+            <p>
+                <a href="#">Attorneys</a><br>
+            </p>            <p>
+                <a href="#">Staff</a><br>
+            </p>            <p>
+                <a href="#">Reputation</a><br>
+            </p>            
+            <p>
+                <a href="#">History</a>
+            </p>
+                <div class="mapouter">
+                    <div class="gmap_canvas"><iframe width="270" height="90" id="gmap_canvas" src="https://maps.google.com/maps?q=55%20West%20Monroe%20Street%20Suite%201800%20Chicago%2C%20Illinois%2060603&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com">what is my ip</a>
+                    </div>
+                    <style>.mapouter{position:relative;text-align:right;height:50px;width:50px;}.gmap_canvas {overflow:hidden;background:none!important;height:80px;width:200px;}</style>
+                </div>
+            <br>
+            <p>
+            Where We Work
+            <br>
+            Find out more about our work area coverage.
+            </p>
         </div>
+        
 
         <div class="content">
+            <div class="first-paragraph">
+                Who we are? That is one of the most important questions a propspective client can ask us. Our answer - one of the most respected law firms in the country that cares about your case, your business, and solving your problem. We invite you to get to know our attorneys bettera and understand the depth of experience and talent we have in the links below
+            </div>
+            <br>
+            <div class="photo-grid">
             <!--Image for Welcome link-->
-            <img src="images/tim-mossholder-8FBTtjCZ9oM-unsplash.jpg" alt="Welcome" style="width:200px;height:200px;">
+                <img src="images/tim-mossholder-8FBTtjCZ9oM-unsplash.jpg" alt="Welcome" width="250" height="120px">
             <!--Image for Attorneys link-->
-            <img src="images/jackie-boylhart-x4Ln13R0c4c-unsplash.jpg" alt="Attorneys" style="width:200px;height:200px;">
+            <img src="images/jackie-boylhart-x4Ln13R0c4c-unsplash.jpg" alt="Attorneys" width="250" height="120px">
             <!--Image for Staff link-->
-            <img src="images/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Staff" style="width:200px;height:200px;">
+            <img src="images/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Staff" width="250" height="120px">
             <!--Image for Reputation link-->
-            <img src="images/nat-weerawong-0cZgvYHirBg-unsplash.jpg" alt="Reputation" style="width:200px;height:200px;"> 
+            <img src="images/nat-weerawong-0cZgvYHirBg-unsplash.jpg" alt="Reputation" width="250" height="120px"> 
             <!--Image for History Link-->
-            <img src="images/natalia-y-f5xddISq428-unsplash.jpg" alt="History" style="width:200px;height:200px;"> 
-        
-            <p>
-                here is our website
-            </p>
+            <img src="images/natalia-y-f5xddISq428-unsplash.jpg" alt="History" width="250" height="120px">
+            </div> 
         </div>
         <div class="footer">
             <footer>
@@ -105,7 +118,7 @@
                         <a href="#">CONTACT US</a>
                     </li>
                 </ul>
-                <h6>&copy;2009 Neltse, Zehe & Antas, P.C. // Website Design by OneTen Creative</h6>
+                <h6>&copy;2509 Neltse, Zehe & Antas, P.C. // Website Design by OneTen Creative</h6>
             </footer>
         </div>
 
