finished what page and added text to photos

--- a/about.html
+++ b/about.html
@@ -83,14 +83,19 @@
             <div class="photo-grid">
             <!--Image for Welcome link-->
                 <img src="images/tim-mossholder-8FBTtjCZ9oM-unsplash.jpg" alt="Welcome" width="250" height="120px">
+                <div class="caption1">Welcome</div>
             <!--Image for Attorneys link-->
-            <img src="images/jackie-boylhart-x4Ln13R0c4c-unsplash.jpg" alt="Attorneys" width="250" height="120px">
+            <img src="images/tingey-injury-law-firm-nSpj-Z12lX0-unsplash.jpg" alt="Attorneys" width="250" height="120px">
+            <div class="caption2">Attorneys</div>
             <!--Image for Staff link-->
             <img src="images/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Staff" width="250" height="120px">
+            <div class="caption3">Staff</div>
             <!--Image for Reputation link-->
             <img src="images/nat-weerawong-0cZgvYHirBg-unsplash.jpg" alt="Reputation" width="250" height="120px"> 
+            <div class="caption4">Reputation</div>
             <!--Image for History Link-->
             <img src="images/natalia-y-f5xddISq428-unsplash.jpg" alt="History" width="250" height="120px">
+            <div class="caption5">History</div>
             </div> 
         </div>
         <div class="footer">
