--- a/what.html
+++ b/what.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="l_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
+        </div>
+        <div class="r_side">
+            <img class="side-panel"src="images/perfect.jpeg" alt="blank">
+        </div>
         <div class="header">
-            <img src="https://via.placeholder.com/110x100" alt="logo">
-                <div class="banner">
+            <img class="logo" src="https://via.placeholder.com/70x70" alt="logo">
+            <div class="banner">
                 <h1>NIELSEN, ZEHE & ANTAS, P.C.</h1>
             </div>
         </div>
@@ -44,48 +50,54 @@
             </nav>
         </div>
 
-        <div class="link">
-            <h4>What We Do</h4><br><hr>
-            <ul>
-                <li>
-                    <a href="#">Subrogation</a><br>
-                    Property<br>
-                    Workers compensation
-                </li>
-                <li>
-                    <a href="#">Litigation</a><br>
-                    Apellate<br>
-                    Commercial<br>
-                    Defense<br>
-                    Labor/Employment<br>
-                </li>
-                <li>
-                    <a href="#">Business</a><br>
-                    Brokerage Agreement<br>
-                    Business Formation<br>
-                    Business Related Contracts<br>
-                    Labor/Employment<br>
-                <li>
-                    Transportation
-                </li>
-                <li>
-                    <a href="#">history</a>
-                    <!--Image for Attorneys link-->
-                    <img src="images/tingey-injury-law-firm-nSpj-Z12lX0-unsplash.jpg" alt="Attorneys" style="width:200px;height:200px;">
-                </li>
-                    <img id="office-photo" src="/images/office_photo.jpg" width="150px" height="150px">
-                
-            </ul>
+        <div class="left-sidebar">
+            <h4>What We Do</h4><hr>
+            <div class="context">
+                Subrogation<br>
+                Property<br>
+                Workers compensation<br><br>
+            </div>
+            <div class="context">
+                Litigation<br>
+                Apellate<br>
+                Commercial<br>
+                Defense<br>
+                Labor/Employment<br><br>
+            </div>
+            <div class="context">
+                Business<br>
+                Brokerage Agreement<br>
+                Business Formation<br>
+                Business Related Contracts<br>
+                Labor/Employment<br><br>
+            </div>
+            <div class="context">
+                Transportation
+            </div>
+            <br>
+            <!--Image for Attorneys link-->
+            <img class="attorney" src="images/tingey-injury-law-firm-nSpj-Z12lX0-unsplash.jpg" alt="Attorneys" width="120px" height="80px">
+            <div class="caption">
+                Attorneys<br>
+                Meet our prestigious and esteemed associates.
+            </div>
         
         </div>
         <div class="content">
-            <img src="images/melinda-gimpel-xcVW_sFp4jQ-unsplash.jpg" style="width:200px;height:200px;">
-            <img src="images/drew-beamer-Se7vVKzYxTI-unsplash.jpg" style="width:200px;height:200px;">
-            <img src="images/adeolu-eletu-E7RLgUjjazc-unsplash.jpg" style="width:200px;height:200px;">
-            <img src="images/shay-5n2EemBYQm4-unsplash.jpg" style="width:200px;height: 200px;">
-            <p>
-                here is our website
-            </p>
+            <div class="first-paragraph">
+                Who we are? That is one of the most important questions a propspective client can ask us. Our answer - one of the most respected law firms in the country that cares about your case, your business, and solving your problem. We invite you to get to know our attorneys bettera and understand the depth of experience and talent we have in the links below
+            </div>
+            <br>
+            <div class="photo-grid">
+                <img src="images/melinda-gimpel-xcVW_sFp4jQ-unsplash.jpg" width="250" height="120px">
+                <div class="caption1">Subrogation</div>
+                <img src="images/drew-beamer-Se7vVKzYxTI-unsplash.jpg" width="250" height="120px">
+                <div class="caption2">Litigation</div>
+                <img src="images/adeolu-eletu-E7RLgUjjazc-unsplash.jpg" width="250" height="120px">
+                <div class="caption3">Business</div>
+                <img src="images/shay-5n2EemBYQm4-unsplash.jpg" width="250" height="120px">
+                <div class="caption4">Transportation</div>
+            </div>
         </div>
         <div class="footer">
             <footer>
