--- a/what.html
+++ b/what.html
@@ -24,11 +24,11 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/nza-group-website/about.html">WHO WE ARE </a>
+                        <a href="/about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/nza-group-website/what.html">WHAT WE DO</a>
+                        <a href="/what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
@@ -103,7 +103,7 @@
             <footer>
                 <ul>
                     <li>
-                        <a href="/nza-group-website/index.html">HOME</a>
+                        <a href="/index.html">HOME</a>
                     </li>
                     <li>-</li>
                     <li>
