--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/nza-group-website/about.html">WHO WE ARE </a>
+                        <a href="/about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/nza-group-website/what.html">WHAT WE DO</a>
+                        <a href="/what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
@@ -102,7 +102,7 @@
             <footer>
                 <ul>
                     <li>
-                        <a href="/nza-group-website/index.html">HOME</a>
+                        <a href="/index.html">HOME</a>
                     </li>
                     <li>-</li>
                     <li>
@@ -110,7 +110,7 @@
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/whatt.html">WHAT WE DO</a>
+                        <a href="/what.html">WHAT WE DO</a>
                     <li>-</li>
                     <li>
                         <a href="#">NEWS & EVENTS</a>
