--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/nza-group-website/about.html">WHO WE ARE </a>
+                        <a href="/about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/nza-group-website/what.html">WHAT WE DO</a>
+                        <a href="/what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
